@startuml
' Entities
abstract class BaseEntity<T> {
  + Id: T
  + Guid: Guid
  + CreatedAt: DateTime
}

class User <<Entity>> {
  + Email: string
  + Password: string
  + Address: Address
}

class Message <<Entity>> {
  + Content: string
  + Sender: User
  + MessengerEntry: MessengerEntry
}

class MessengerEntry <<Entity>> {
  + Owner: User
  + Participants: List
  + Messages: List
}

class Address <<Value Object>> {
  + Street: string
  + City: string
  + Country: string
}

' Inheritance
BaseEntity <|-- User
BaseEntity <|-- Message
BaseEntity <|-- MessengerEntry

' Relationships
User --  Address
User "1" <-- "0..n" Message : sends >
User "1" <-- "0..n" MessengerEntry : creates >
User "0..n" <-- "0..n" MessengerEntry : participates >
MessengerEntry "1" <--> "0..n" Message
@enduml